Bump version to flyway-10.22.0
Please see the GH release for the release notes

Clean postgres collations from PR 3791

Use default storage engine for MySQL schema history table. From PR 3642

Include Placeholder separator when throwing unknown default placeholder exception.